# FlipCache

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: benchmark.py  custom_encoder.py  default_example.py  expiring_cache.py  fifo_async_safe.py  fifo_example.py  fifo_thread_safe.py  json_example.py  lru_async_safe.py  lru_example.py  lru_thread_safe.py
flipcache/: __init__.py  et.py  fifo_dict.py  flipcache.py  lru_dict.py
pycache/: __init__.py  types.py
