[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyCache"
version = "0.0.1"
description = 'Redis-backed hybrid caching for lightning-fast Python data access'
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Jasur Yusupov", email = "jasuryusupov14@gmail.com" },
]
maintainers = [
    { name = "Jasur Yusupov", email = "jasuryusupov14@gmail.com" },
]
keywords = [
    "cache",
    "memory",
    "redis",
    "wrapper",
    "fast_access"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "redis",
]

[project.urls]
Homepage = "https://github.com/goodeejay/PyCache"
Issues = "https://github.com/goodeejay/PyCache/issues"

[tool.hatch.envs.default.scripts]
reformat = [
    "black pycache tests",
    "isort pycache tests",
]

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | .venv
  | docs
)
'''

[tool.isort]
profile = "black"
