[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FlipCache"
version = "1.3"
description = 'Redis-backed hybrid caching for lightning-fast Python data access'
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Jasur Yusupov", email = "jasuryusupov14@gmail.com" },
]
maintainers = [
    { name = "Jasur Yusupov", email = "jasuryusupov14@gmail.com" },
]
keywords = [
    "cache",
    "memory",
    "redis",
    "wrapper",
    "fast_access",
    "expiring_dict",
    "limited_dict"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "redis",
]

[project.urls]
Homepage = "https://github.com/goodeejay/FlipCache"
Issues = "https://github.com/goodeejay/FlipCache/issues"
